[package]
name = "yakui-macroquad"
version = "0.3.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/profan/yakui-macroquad"
description = "A library integrating yakui with macroquad."
license = "MIT"

keywords = ["gamedev", "graphics", "ui"]
categories = ["gui"]

[dependencies]
macroquad = { version = "0.4.5", default-features = false }
yakui-miniquad = { git = "https://github.com/juh9870/yakui-miniquad.git", branch = "yakui_main" }
send_wrapper = "0.6.0"

[dev-dependencies]
yakui = { git = "https://github.com/SecondHalfGames/yakui.git", rev = "7346eb7bc011c95fb82502dacecb92f086389474" }

[[example]]
name = "hello-world"
